RESOLVED FIXED282794
[iPad] cbssports.com: Media controls on videos do not respond to trackpad clicks
https://bugs.webkit.org/show_bug.cgi?id=282794
Summary [iPad] cbssports.com: Media controls on videos do not respond to trackpad clicks
Wenson Hsieh
Reported 2024-11-07 17:25:56 PST
Attachments
Wenson Hsieh
Comment 1 2024-11-07 17:35:46 PST
EWS
Comment 2 2024-11-08 07:44:39 PST
Committed 286338@main (44b6bb811936): <https://commits.webkit.org/286338@main> Reviewed commits have been landed. Closing PR #36358 and removing active labels.
EWS
Comment 3 2024-12-03 07:03:53 PST
Committed 283286.549@safari-7620-branch (7a99ebfa9ec0): <https://commits.webkit.org/283286.549@safari-7620-branch> Reviewed commits have been landed. Closing PR #2356 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.