Source/WebCore/page/Quirks.h
@@ -222,6 +222,7 @@ public:
 
 #if PLATFORM(IOS_FAMILY)
     WEBCORE_EXPORT bool shouldIgnoreContentObservationForClick(const Node&) const;
+    WEBCORE_EXPORT bool shouldSynthesizeTouchEventsAfterNonSyntheticClick(const Node&) const;
 #endif
 
     bool needsMozillaFileTypeForDataTransfer() const;
