Source/WebKit/WebProcess/WebCoreSupport/WebChromeClient.h
@@ -548,6 +548,8 @@ private:
 
     void callAfterPendingSyntheticClick(CompletionHandler<void(WebCore::SyntheticClickResult)>&&) final;
 
+    void didSwallowClickEvent(const WebCore::PlatformMouseEvent&, WebCore::Node&) final;
+
     mutable bool m_cachedMainFrameHasHorizontalScrollbar { false };
     mutable bool m_cachedMainFrameHasVerticalScrollbar { false };
 
